--- a/index.html
+++ b/index.html
@@ -1,358 +1,160 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <title>PS Network Experts 2025</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PS Network Experts</title>
   <style>
-    :root {
-  --azul-escuro: #0057b8;
-  --azul-claro: #007bff;
-  --cinza-claro: #f4f4f4;
-  --branco: #ffffff;
-  --texto-claro: #222222;
-}
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: var(--cinza-claro);
-  color: var(--texto-claro);
-  scroll-behavior: smooth;
-}
-
-    header {
-      background-color: var(--azul-escuro);
-text-align: center;
-      padding: 140px 20px 100px;
-      color: var(--branco);
-    }
-
-    header h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-      text-shadow: 1px 1px 3px #000;
-    }
-
-    header p {
-      font-size: 1.2em;
-      text-shadow: 1px 1px 2px #000;
-    }
-
-    nav {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: var(--azul-escuro);
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  z-index: 999;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-}
-
-    nav a {
-      color: var(--branco);
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: var(--azul-claro);
-    }
-
-    section {
-      padding: 60px 20px;
-      max-width: 1100px;
-      margin: 30px auto;
-      background-color: var(--cinza-claro);
-      color: #222;
-      border-radius: 12px;
-    }
-
-    section:nth-child(even) {
-      background-color: #ffffff;
-    }
-
-    h2 {
-      color: var(--azul-escuro);
-      border-bottom: 2px solid var(--azul-claro);
-      padding-bottom: 10px;
-      margin-bottom: 20px;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    form label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-
-    form input,
-    form textarea,
-    form select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin-top: 5px;
-      font-size: 1em;
-    }
-
-    form button {
-      margin-top: 20px;
-      background-color: var(--azul-claro);
-      color: white;
-      padding: 12px 25px;
-      border: none;
-      border-radius: 6px;
-      font-size: 1em;
-      cursor: pointer;
-    }
-
-    form button:hover {
-      background-color: #005dc1;
-    }
-
-    footer {
-  background-color: var(--azul-escuro);
-  color: var(--branco);
-  text-align: center;
-  padding: 20px;
-  font-size: 0.9em;
-}
-
-    .logo {
-      position: absolute;
-      left: 20px;
-      top: 10px;
-    }
-
-    .logo img {
-      height: 40px;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    [data-animate] {
-      opacity: 0;
-      animation: fadeIn 1s ease forwards;
-    }
-
-    [data-animate].show {
-      opacity: 1;
-    }
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
+    header, section { padding: 40px; }
+    header { background-color: #004080; color: white; text-align: center; }
+    h1, h2, h3 { color: #004080; }
+    .section-title { border-bottom: 2px solid #004080; margin-bottom: 20px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+    footer { text-align: center; padding: 20px; background: #004080; color: white; }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="#sobre">Sobre</a>
-    <a href="#indicadores">Indicadores</a>
-    <a href="#diferenciais">Diferenciais</a>
-    <a href="#casos">Casos</a>
-    <a href="#servicos">Serviços</a>
-    <a href="#contato">Contato</a>
-    <a href="#formulario">Solicite Visita</a>
-  </nav>
 
-  $1
+<header>
+  <h1>PS Network Experts</h1>
+  <p>Inovando Infraestruturas Digitais desde 2012</p>
+</header>
 
-  <section id="animacao" data-animate">
-    <h2 style="text-align: center;">Por que escolher a PSNE?</h2>
-    <div style="display: flex; flex-direction: column; gap: 20px; margin-top: 20px;">
-      <div style="background-color: white; padding: 25px; border-radius: 12px;">
-        <h3>Profundidade Técnica com Visão Estratégica</h3>
-        <p>Nossos especialistas combinam conhecimento técnico avançado com compreensão estratégica dos negócios, garantindo soluções que não apenas funcionam, mas impulsionam o crescimento e a eficiência operacional.</p>
-      </div>
-      <div style="background-color: white; padding: 25px; border-radius: 12px;">
-        <h3>Compromisso com a Qualidade e a Disponibilidade</h3>
-        <p>Com processos rigorosos, NOC 24/7 e atendimento multilíngue, asseguramos suporte contínuo, entregas pontuais e ambientes resilientes com alto grau de confiabilidade.</p>
-      </div>
-      <div style="background-color: white; padding: 25px; border-radius: 12px;">
-        <h3>Inovação Orientada a Resultados</h3>
-        <p>Aplicamos tecnologias como IA, automação e redes programáveis para acelerar a transformação digital dos nossos clientes, mantendo foco em segurança, performance e escalabilidade.</p>
-      </div>
-    </div>
-  </section>
+<section>
+  <h2 class="section-title">Sobre Nós</h2>
+  <p>Com 12 anos de experiência e uma equipe com mais de 20 anos de atuação em tecnologia, somos especialistas em auxiliar operadoras, data centers e provedores a inovar, crescer e se manter à frente da concorrência.</p>
+</section>
 
+<section>
+  <h2 class="section-title">Nossa Missão</h2>
+  <p>Promover mudanças positivas e sustentáveis, garantindo que nossos clientes permaneçam relevantes, lucrativos e alinhados às demandas de seus mercados.</p>
+</section>
 
-  <section id="depoimentos" data-animate>
-    <h2>O que dizem nossos clientes</h2>
-    <div style="display: flex; flex-direction: column; gap: 30px;">
-      <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
-        <p>“A PSNE nos ajudou a escalar nossa rede com segurança e eficiência. A expertise técnica é incomparável.”</p>
-        <footer>— João Carvalho, CTO da AlphaNet</footer>
-      </blockquote>
-      <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
-        <p>“Excelente atendimento, suporte ágil e soluções inovadoras. Recomendo fortemente a PSNE.”</p>
-        <footer>— Marina Lopes, Gerente de TI da Vero Telecom</footer>
-      </blockquote>
-      <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
-        <p>“Profissionais muito bem preparados. A abordagem consultiva faz toda a diferença no sucesso dos nossos projetos.”</p>
-        <footer>— Ricardo Martins, Diretor de Infraestrutura da DataPlus</footer>
-      </blockquote>
-    </div>
-  </section>
-
-  </section>
-
-  <section id="sobre" data-animate>
-  <h2>Sobre a PSNE</h2>
-  <div style="background-color: white; padding: 25px; border-radius: 12px;">
-    <p>Com mais de duas décadas de experiência em projetos críticos de telecomunicações, redes e TI, a PS Network Experts nasceu para resolver problemas reais com excelência técnica e mentalidade consultiva. Atuamos lado a lado com nossos clientes para construir infraestruturas resilientes, inteligentes e preparadas para o futuro.</p>
-    <p>Nossa missão é entregar valor contínuo através de soluções personalizadas, mantendo um time altamente capacitado, certificado e comprometido com o sucesso de cada entrega.</p>
+<section>
+  <h2 class="section-title">Indicadores de Sucesso</h2>
+  <div class="grid">
+    <div><strong>600+</strong> Projetos Entregues</div>
+    <div><strong>150</strong> Intervenções Mensais</div>
+    <div><strong>50</strong> Engenheiros Especializados</div>
+    <div><strong>10.000+</strong> Chamados resolvidos por mês</div>
   </div>
 </section>
 
-  <section id="indicadores" data-animate>
-    <h2>Nossos Números</h2>
-    <ul>
-      <li><strong>+600</strong> projetos entregues</li>
-      <li><strong>+10 mil</strong> chamados resolvidos por mês</li>
-      <li><strong>+50</strong> engenheiros certificados</li>
-      <li><strong>+150</strong> janelas de intervenção por mês</li>
-    </ul>
-  </section>
+<section>
+  <h2 class="section-title">Nossos Diferenciais</h2>
+  <ul>
+    <li>Tecnologia em Primeiro Lugar</li>
+    <li>Soluções Personalizadas e Integradas</li>
+    <li>Flexibilidade com Qualidade</li>
+    <li>Competência Multi Skill e Multi Vendor</li>
+    <li>Equipe Altamente Qualificada</li>
+    <li>Abordagem Consultiva com mais de 20 anos de experiência</li>
+    <li>Atendimento Multilíngue (Português, Inglês e Espanhol)</li>
+  </ul>
+</section>
 
-  <section id="diferenciais" data-animate>
-  <h2>Diferenciais</h2>
-  <div style="display: flex; flex-direction: column; gap: 20px;">
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Experiência Prática e Multissetorial</h3>
-      <p>Nosso time técnico não apenas conhece as tecnologias mais avançadas do mercado, mas também vivencia os ambientes reais dos clientes. Isso garante entregas com foco na operação e não apenas na teoria.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Especialização em Diversos Fabricantes</h3>
-      <p>Trabalhamos com as principais marcas e plataformas do setor, com profissionais certificados e capazes de oferecer soluções integradas, flexíveis e seguras para cada cenário de negócio.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Atendimento com Escopo Personalizado</h3>
-      <p>Não aplicamos fórmulas prontas. Cada cliente é único, e nossas soluções refletem essa realidade. Seja na infraestrutura, operação ou suporte, adaptamos tudo ao que seu negócio realmente precisa.</p>
-    </div>
+<section>
+  <h2 class="section-title">Casos de Sucesso</h2>
+  <ul>
+    <li><strong>Operadoras de Grande Porte:</strong> GVT, Telefônica, Algar</li>
+    <li><strong>Operadoras Regionais:</strong> Alloha, Vero, Desktop</li>
+    <li><strong>Grandes Empresas:</strong> Energisa, TOTVS, Sicredi</li>
+    <li><strong>Parcerias:</strong> Com integradores e revendas nacionais</li>
+  </ul>
+</section>
+
+<section>
+  <h2 class="section-title">Nossa Equipe</h2>
+  <p>Composta por especialistas altamente qualificados em telecomunicações, tecnologia e infraestrutura digital. Profissionais com habilidades multidisciplinares e experiência prática que transformam ideias em resultados tangíveis.</p>
+</section>
+
+<section>
+  <h2 class="section-title">Parcerias Tecnológicas</h2>
+  <h3>GAIO - Data Lake Inteligente</h3>
+  <ul>
+    <li>Automatiza processos e otimiza decisões</li>
+    <li>Reduz custos operacionais</li>
+    <li>Previne fraudes com IA/ML</li>
+    <li>Aprimora a experiência do cliente</li>
+  </ul>
+
+  <h3>ARISTA - Infraestrutura de Rede de Alto Desempenho</h3>
+  <ul>
+    <li>Alta escalabilidade</li>
+    <li>Automação via EOS e APIs abertas</li>
+    <li>Baixa latência e alto throughput</li>
+    <li>Integração com Multicloud e Edge Computing</li>
+    <li>Segurança e visibilidade em tempo real com CloudVision</li>
+  </ul>
+</section>
+
+<section>
+  <h2 class="section-title">Liderança</h2>
+  <ul>
+    <li>Rogerio Vedovato – Presidente</li>
+    <li>Alberto Noronha – Diretor Executivo</li>
+    <li>Mauricio Maehara – Diretor Executivo</li>
+    <li>Renato Vaz – Diretor de Projetos</li>
+    <li>Morgana Jacomini – Diretora de Novos Negócios</li>
+    <li>Carlil Gibran – Diretor de Consultoria</li>
+    <li>Eder Marcelo – Diretor de Serviços</li>
+    <li>Raphael Luca – Diretor de Clientes</li>
+  </ul>
+</section>
+
+<section>
+  <h2 class="section-title">Certificações</h2>
+  <div class="grid">
+    <div><strong>Arista:</strong> ACE Cloud Associate (L2) até Expert (L7)</div>
+    <div><strong>Cisco:</strong> CCNA, CCNP, CCIE SP e R&S</div>
+    <div><strong>Fortinet:</strong> NSE 1 a NSE 4</div>
+    <div><strong>Huawei:</strong> HCIP, HCIE (em andamento)</div>
+    <div><strong>Juniper:</strong> JNCIA, JNCIS_SP, JNCIP_SP, JNCIE_SP</div>
   </div>
 </section>
 
-  <section id="casos" data-animate>
-  <h2>Casos de Sucesso</h2>
-  <div style="display: flex; flex-direction: column; gap: 20px;">
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Operadoras de Grande Porte</h3>
-      <p>Implementamos soluções de alta disponibilidade e redes multisserviços para empresas como GVT, Vivo e Algar, apoiando sua expansão e confiabilidade operacional.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>ISPs Regionais</h3>
-      <p>Trabalhamos com Alloha, Vero e Desktop oferecendo escalabilidade, controle e eficiência em redes de acesso e backbone regional.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Setor Corporativo e Institucional</h3>
-      <p>Projetos com TOTVS, Sicredi e Energisa demonstram nossa capacidade de integrar tecnologia à operação com segurança, inteligência e governança.</p>
-    </div>
-  </div>
+<section>
+  <h2 class="section-title">Desafios do Mercado</h2>
+  <ul>
+    <li>Forças regulatórias exigindo novos modelos de negócio</li>
+    <li>Dinâmicas de mercado mais exigentes</li>
+    <li>Expectativas dos clientes em constante evolução</li>
+  </ul>
 </section>
 
-  <section id="servicos" data-animate>
-  <h2>Serviços</h2>
-  <div style="display: flex; flex-direction: column; gap: 20px;">
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Consultoria Estratégica</h3>
-      <p>Alinhamos tecnologia aos objetivos do seu negócio, com planos de ação focados em crescimento, performance e continuidade operacional.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Implantação e Projetos</h3>
-      <p>Do planejamento à ativação, realizamos a entrega completa de redes, infraestrutura e soluções em telecomunicações.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Field Services & NOC 24/7</h3>
-      <p>Monitoramento, operação e manutenção contínua com alta disponibilidade, equipe em campo e gestão de incidentes em tempo real.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Data Intelligence e Cibersegurança</h3>
-      <p>Aplicação de inteligência artificial, big data e segurança da informação para garantir operações protegidas, ágeis e baseadas em dados.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Redes Corporativas e Mobilidade</h3>
-      <p>Projetos de redes LAN, WAN e Wi-Fi corporativo, além de conectividade 5G Privado e integração com ambientes em nuvem.</p>
-    </div>
-  </div>
+<section>
+  <h2 class="section-title">Nossa Abordagem</h2>
+  <ul>
+    <li>Conhecimento Profundo do Setor</li>
+    <li>Visão Estratégica</li>
+    <li>Especialização Tecnológica</li>
+    <li>Soluções Personalizadas</li>
+  </ul>
 </section>
 
-  <section id="contato" data-animate>
-    <h2>Fale Conosco</h2>
-    <p><strong>Endereço:</strong> Av. Sagitário 138 – Torre London – Sala 1514, Alphaville – Barueri, SP – 06473-073</p>
-    <p><strong>Telefone:</strong> +55 11 3522-9011</p>
-    <p><strong>Email:</strong> contato@psne.com.br</p>
-  </section>
+<section>
+  <h2 class="section-title">Serviços</h2>
+  <ul>
+    <li><strong>Consultoria:</strong> Estratégia e modelo de negócio</li>
+    <li><strong>Implantação de Projetos:</strong> Integração e soluções sob medida</li>
+    <li><strong>Field Service:</strong> Suporte in loco com equipe certificada</li>
+    <li><strong>NOC:</strong> Monitoramento e suporte 24/7</li>
+    <li><strong>Inteligência de Dados:</strong> Data Lake, IA e ML</li>
+    <li><strong>Cibersegurança:</strong> Proteção de Infraestrutura e Dados</li>
+    <li><strong>Mobilidade:</strong> Wi-Fi e 5G Privado</li>
+    <li><strong>Redes & Data Center:</strong> LAN, WAN e Nuvem</li>
+  </ul>
+</section>
 
-  <section id="formulario" data-animate>
-    <h2>Solicite uma Reunião</h2>
-    <form action="#" method="post">
-      <label for="nome">Nome Completo</label>
-      <input type="text" id="nome" name="nome" required>
+<section>
+  <h2 class="section-title">Transforme sua Infraestrutura Digital</h2>
+  <p>Descubra como a PS Network Experts pode impulsionar a inovação, o crescimento e a sustentabilidade do seu negócio. Entre em contato para uma consultoria personalizada.</p>
+</section>
 
-      <label for="empresa">Empresa</label>
-      <input type="text" id="empresa" name="empresa">
+<footer>
+  <p>&copy; 2025 PS Network Experts. Todos os direitos reservados.</p>
+</footer>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="telefone">Telefone</label>
-      <input type="tel" id="telefone" name="telefone">
-
-      <label for="tipo">Tipo de Atendimento</label>
-      <select id="tipo" name="tipo">
-        <option value="visita">Solicitar Visita Técnica</option>
-        <option value="reuniao">Solicitar Reunião Online</option>
-      </select>
-
-      <label for="assunto">Assunto</label>
-      <select id="assunto" name="assunto">
-        <option value="consultoria">Consultoria Estratégica</option>
-        <option value="implantacao">Implantação de Projetos</option>
-        <option value="field">Field Service</option>
-        <option value="noc">NOC 24/7</option>
-        <option value="dados">Inteligência de Dados</option>
-        <option value="ciberseguranca">Cibersegurança</option>
-        <option value="mobilidade">Mobilidade (Wi-Fi e 5G)</option>
-        <option value="redes">Redes e Data Center</option>
-      </select>
-
-      <label for="mensagem">Mensagem</label>
-      <textarea id="mensagem" name="mensagem" rows="5"></textarea>
-
-      <button type="submit">Enviar</button>
-    </form>
-  </section>
-
-  <section id="sobre" data-animate>
-
-  <script>
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('show');
-          observer.unobserve(entry.target);
-        }
-      });
-    }, {
-      threshold: 0.1
-    });
-
-    document.querySelectorAll('[data-animate]').forEach(el => {
-      observer.observe(el);
-    });
-  </script>
 </body>
 </html>
